welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:4: error: Int.type does not take parameters
	Int ( tea>= 2*candy || candy >= 2*tea ) { (2) }
            ^